增加升级 V1.0 相关文档

--- a/docs/upgrade/1.0.md
+++ b/docs/upgrade/1.0.md
@@ -2,6 +2,36 @@
 
 1.0 版新增了很多的功能，但一些改动也涉及到项目骨架目录的调整，以及各配置项的结构调整，如果您的项目已经投入了业务使用，那么可以根据下面的内容点来调整您的项目。如果您是一个新的项目，按照文档重新[安装](https://mochat.wiki/quick-start/install-bt.html)即可。
 
+## 功能更新概要
+
+* 【代码优化】基础开发框架 Hyperf 版本由 2.0 升级至 2.2
+* 【代码优化】目录结构优化，将 api-server 拆分成核心应用和插件，便于后期扩展
+* 【新增功能】引流获客 - 门店活码
+* 【新增功能】营销中心 - 任务宝
+* 【新增功能】营销中心 - 群裂变
+* 【新增功能】营销中心 - 抽奖活动
+* 【新增功能】营销中心 - 群打卡
+* 【新增功能】客户转化 - 个人SOP
+* 【新增功能】客户转化 - 自动打标签
+* 【新增功能】客户转化 - 互动雷达
+* 【新增功能】客户管理 - 离职继承
+* 【新增功能】客户管理 - 在职转接
+* 【新增功能】运营管理 - 客户统计
+* 【新增功能】运营管理 - 成员统计
+* 【新增功能】客户群运营 - 群SOP
+* 【新增功能】客户群运营 - 群日历
+* 【新增功能】客户群运营 - 标签建群
+* 【新增功能】客户群运营 - 客户群提醒
+* 【新增功能】客户群运营 - 群聊质检
+* 【新增功能】客户群运营 - 无限拉群
+* 【新增功能】客户群运营 - 客户群群发
+* 【新增功能】客户群运营 - 入群欢迎语
+* 【新增功能】系统设置 - 公众号授权
+* 【代码优化】将客户头像、员工头像优化为存储原地址，不再同步至本地
+* 【代码优化】优化文件上传方式，不再支持自定义文件名
+* 【代码优化】将全局认证 Auth 取消，改为 dashboard、sidebar独立中间件
+* 【Bug修复】大量已知bug修复
+
 ## 升级 PHP 到 7.4+
 
 1.0 版本将最低的 PHP 版本要求从 7.2+提升到 7.4+，请重新安装PHP和相关扩展。
