增加升级 V1.0 相关文档

--- a/docs/upgrade/1.0.md
+++ b/docs/upgrade/1.0.md
@@ -185,6 +185,9 @@ location ^~ /auth/ {
 ```
 
 ### 重启nginx服务
+```shell script
+systemctl restart nginx
+```
 
 ### 配置开放平台&公众号
 参考[开放平台&公众号配置教程](https://mochat.wiki/wework/open-platform.html)
