增加禁用函数和关闭原服务文案

--- a/docs/upgrade/1.0.md
+++ b/docs/upgrade/1.0.md
@@ -103,8 +103,12 @@ OPERATION_BASE_URL=https://op.mo.chat
 ## 启动服务
 ```shell script
 cd /www/wwwroot/mochat/api-server
+# 如果旧版服务未停止，可以使用下面的命令停止旧的api-server
+ps aux | grep mochat |  awk '{print $2}' | xargs kill -9
 # 加-d表示守护进程方式启动
 php bin/hyperf.php server:start -d
+# 如果报错 pcntl_fork() has been disabled for securyity reasons
+# 则去宝塔后台软件商店-PHP-7.4管理-禁用函数或php.ini 中 disable_functions 中删除相关函数
 ```
 
 ### 依次配置各前端
