增加版本升级非1.2.1提示

--- a/docs/upgrade/1.3.md
+++ b/docs/upgrade/1.3.md
@@ -50,6 +50,14 @@
 * 【Bug修复】客户管理：修复客户详情直接显示代码问题
 * 【Bug修复】客户待办：修复应用提醒通知查看客户详情链接无法打开问题
 
+## 升级前请查看当前系统版本号，执行以下命令
+```shell script
+cd /www/wwwroot/mochat
+php bin/hyperf.php mochat:version
+
+# 记录下当前版本号，如果不是版本 1.2.1，后面需要注意升级多次
+```
+
 ## 备份原有配置文件和数据库
 
 * 备份以下配置文件：
@@ -85,7 +93,14 @@ mv /www/wwwroot/mochat /www/wwwroot/mochat_old
 ```shell script
 # 未二次开发过可以直接执行
 # 如果二次开发过，增加过菜单，改过 mc_rbac_menu 表的，请自行对照升级SQL改为自己的升级SQL。
+# 如果当前版本号是 1.2.1 请直接执行下面的命令
 # php bin/hyperf.php mochat:upgrade 1.3.0
+
+# 如果当前版本号不是 1.2.1 请执行升级中间的版本
+# php bin/hyperf.php mochat:upgrade 1.2.0
+# php bin/hyperf.php mochat:upgrade 1.2.1
+# php bin/hyperf.php mochat:upgrade 1.3.0
+
 # 执行后按提示输入超管后台账号密码
 ```
 
