增加1.4升级指南

--- a/docs/upgrade/1.4.md
+++ b/docs/upgrade/1.4.md
@@ -62,8 +62,9 @@ mv /www/wwwroot/mochat /www/wwwroot/mochat_old
 
 ## 配置自建应用代开发相关参数
 
-参考文档 [如何创建自建应用代开发模板](https://www.yuque.com/docs/share/a7e1ee84-e10d-480d-8b06-5b2e36ebe478?)
-
+参考文档 
+* [如何创建自建应用代开发模板](https://www.yuque.com/docs/share/a7e1ee84-e10d-480d-8b06-5b2e36ebe478?)
+* [如何接入自建应用代开发](https://www.yuque.com/docs/share/3d2b1736-b0f5-4668-9d41-133e0bb8d2e3)
 
 ## 启动服务
 ```shell script
