增加新的环境变量说明

--- a/docs/upgrade/1.4.md
+++ b/docs/upgrade/1.4.md
@@ -104,7 +104,16 @@ yarn install
 yarn build
 ```
 
-### 配置新增移动工作台前端
+### 配置新增移动工作台
+
+* 移动工具台前端编译
+
+```shell script
+# 复制备份的配置文件
+cd /www/wwwroot/mochat/workbench
+yarn install
+yarn build
+```
 
 * 移动工作台增加nginx配置
 ```nginx
@@ -131,7 +140,35 @@ server {
 }
 ```
 
-其中.env中新增加的环境变量 `SERVER_IP` 为会话存档白名单IP使用，请填写为服务器公网IP，多个请用英文逗号分隔
+*  api-server/.env中增加移动工作台的URL
 ```shell script
+WORKBENCH_BASE_URL=https://workbench.mo.chat
+```
+
+### 新增加的环境变量配置汇总
+其中api-server/.env中新增加了一些环境变量
+
+`SERVER_IP` 为会话存档白名单IP使用，请填写为服务器公网IP，多个请用英文逗号分隔
+
+```shell script
+# 工作台URL
+WORKBENCH_BASE_URL=https://workbench.mo.chat
+
+# 企业微信服务商配置
+WEWORK_PROVIDER_CORP_ID=wwbced65cxxx
+WEWORK_PROVIDER_SECRET=E-7Ldqs8jXxxxxxx
+WEWORK_PROVIDER_TOKEN=wy57mHQSxx
+WEWORK_PROVIDER_AES_KEY=py6g5MP6GBDd1xxx
+
+# 企业微信自建应用代开发模板
+WEWORK_APP_TEMPLATE_ID=dk97d8950xxx
+WEWORK_APP_TEMPLATE_SECRET=Fx3fakdZhxxx
+WEWORK_APP_TEMPLATE_TOKEN=ahfnIpIR2syx
+WEWORK_APP_TEMPLATE_AES_KEY=KSYbqjLSuJxxxx
+
+# 服务器IP，多个用,号分隔
 SERVER_IP=23.34.33.138,33.34.38.120
+
+# 消息会话存档定时同步间隔时间，单位秒
+MESSAGE_SYNC_INTERVAL=15
 ```
