--- a/docs/upgrade/1.4.md
+++ b/docs/upgrade/1.4.md
@@ -127,9 +127,14 @@ server {
     rewrite_log off;
 
     location / {
-        root /wwww/wwwroot/mochat/workbench/dist;
+        root /www/wwwroot/mochat/workbench/dist;
         index index.html;
         try_files $uri $uri/ /index.html;
+    }
+
+    # 企业微信txt自动验证
+    location ^~ /WW_verify_ {
+        proxy_pass http://127.0.0.1:9501;
     }
 
     location = /favicon.ico {
